[project]
name = "x-likes-exporter"
version = "1.0.0"
description = "Export your liked tweets from X (Twitter) to JSON, CSV, Pandas, Markdown, or HTML."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Marius Ciepluch" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "Pillow>=10.0.0",
    "tqdm>=4.66.0",
    "python-dateutil>=2.8.2",
]

[project.urls]
Repository = "https://github.com/norandom/x_likes_scraper"

[project.scripts]
x-likes-export = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["x_likes_exporter"]
